// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Text should have a helptext 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text">
  <span class="form-text">Type something</span>
</div>
`;

exports[`Field Text should have a key 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should have a label 1`] = `
<div class="form-group">
  <label>label </label>
  <input class="form-control" type="text">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should have a placeholder 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" placeholder="Placeholder" type="text">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should have a spritemap 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should have a value 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" value="value">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should have an id 1`] = `
<div class="form-group">
  <label for="ID"></label>
  <input class="form-control" id="ID" type="text">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should not be editable 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should not be required 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text">
  <span class="form-text"></span>
</div>
`;

exports[`Field Text should render Label if showLabel is true 1`] = `
<div class="form-group">
  <label>text </label>
  <input class="form-control" type="text">
  <span class="form-text"></span>
</div>
`;
